# dataorbit

./: CONTRIBUTING.md  DEV_SETUP.md  LOCAL_TESTING.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml  update-tap.yml
distribute/homebrew/: dataorbit.rb.tmpl
screenshots/report/: index.html
scripts/: seed-large.mjs  seed-local.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: connections.rs  dynamo.rs  mod.rs
src/components/layout/: Shell.tsx  Sidebar.tsx  StatusBar.tsx  Titlebar.tsx
src/components/ui/: AddConnectionWizard.tsx  Badge.tsx  Button.tsx  Callout.tsx  EmptyState.tsx  JsonTree.tsx  Modal.tsx  Skeleton.tsx  Toggle.tsx  UpdateBanner.tsx
src/lib/: tauri.ts  time.ts
src/mock/: data.ts
src/screens/: Browse.tsx  Docs.tsx  Explore.tsx  Home.tsx  QueryHistory.tsx  Settings.tsx  Stream.tsx  Support.tsx
src/styles/: globals.css
src/types/: index.ts
tests/: interactions.spec.ts  screenshots.spec.ts  tsconfig.json
