[package]
name    = "dataorbit"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["rt-multi-thread", "macros"] }

# AWS SDK — DynamoDB
aws-sdk-dynamodb   = "1"
aws-config         = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }

# Utilities
dirs       = "5"
chrono     = { version = "0.4", features = ["serde"] }
anyhow     = "1"
uuid       = { version = "1", features = ["v4"] }
